[package]
authors = [
    "Tide Developers"
]
description = "Tide middleware for logging"
documentation = "https://docs.rs/tide"
keywords = ["tide", "http", "web", "framework", "async", "middleware"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server"
]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "tide-log"
readme = "README.md"
repository = "https://github.com/rustasync/tide"
version = "0.1.0"

[dependencies]
tide = { path = "../tide" }
futures-preview = "0.3.0-alpha.16"
http = "0.1"
log = "0.4.6"